PATCH@QuarMail-Resource
